--- a/project-manager.html
+++ b/project-manager.html
@@ -40,6 +40,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://www.qreer.com/jobs/view/12170/project-manager-with-agile-experience'>Project Manager with Agile experience Job in Veldhoven, Netherlands</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Auto11/743999698450736-project-manager-im-business-development-d-m-w-'>Auto1 Project Manager im Business Development (d/m/w) | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452148-senior-project-manager-m-w-d-commercial'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/TurnerTownsend/743999698452492-senior-project-manager-m-w-d-commercial-hightech-manufacturing'>Turner & Townsend Senior Project Manager (m/w/d) - Commercial / Hightech & Manufacturing | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/vixxo/jobs/4499581002'>Job Application for Field Project Manager at VIXXO</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -184,7 +200,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/therealreal/jobs/4499864002'>Job Application for Project Manager, Merchandising Operations- Secaucus, NJ at The RealReal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/therealreal/jobs/4499864002'>Job Application for Project Manager, Merchandising Operations- Secaucus, NJ at The RealReal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -218,7 +234,7 @@
 <p><span class="badge badge-light">Portland, OR</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://greatminds.recruitee.com/o/senior-project-manager-richmond'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greatminds.recruitee.com/o/senior-project-manager-richmond'>
       Senior Project Manager - Great Minds
     </a></h5> 
 <p><span class="badge badge-light">Richmond United States</span></p>
@@ -286,7 +302,7 @@
 <p><span class="badge badge-light">Toronto Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/dentwizard/job/oOJrbfwT'>Dent Wizard International Careers - Regional Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -318,11 +334,11 @@
 <p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/ancestry/07bdfa10-a1a3-4548-a341-58027447b331'>Ancestry - Creative Project Manager - Marketing - Full Time Contract</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ancestry/07bdfa10-a1a3-4548-a341-58027447b331'>Ancestry - Creative Project Manager - Marketing - Full Time Contract</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
+<h5><a href='https://lbl.referrals.selectminds.com/jobs/program-manager-electricity-markets-and-policy-group-2287'>Program Manager (Electricity Markets and Policy Group) - LBL Careers</a></h5> 
 <p><span class="badge badge-light">United States  Berkeley</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -362,7 +378,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://trulieve.applytojob.com/apply/LQeDRz9Dvs/Project-Manager-Facilities'>Project Manager - Facilities - Trulieve - Career Page</a></h5> 
+<h5><a href='http://trulieve.applytojob.com/apply/LQeDRz9Dvs/Project-Manager-Facilities'>Project Manager - Facilities - Trulieve - Career Page</a></h5> 
 <p><span class="badge badge-light">Midway, FL</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -440,24 +456,6 @@
 <p><span class="badge badge-light"></span></p>
 <p>18 ???. 2019 ... By clicking on "Apply for this job", you confirm that you have read, understood 
 and explicitly agree to the our Applicants Privacy Policy. Apply for this job.</p>
-<hr/>
-<h5><a href='https://www.nesgt.com/job/107430060323/sap-project-slash-programme-manager-1/'>SAP Project/Programme Manager with ref. BH-117757-1 - NES Global Talent</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://archinect.com/jobs/entry/150167171/design-developer-project-manager-for-sculptor'>Design Developer/Project Manager for Sculptor - New York, NY, US | Jobs | Archinect</a></h5> 
-<p><span class="badge badge-light">New York, NYNew York, NY</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBd9VfwC&k=Job&j=oryrbfwl&__jvst=Employee&__jvsd=sTVFrgwF&__jvsc=Twitter&bid=nQaanMwO'>DDB Careers - Digital Project Manager</a></h5> 
-<p><span class="badge badge-light">London, United Kingdom</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://greatminds.recruitee.com/o/project-managermathematics'>
-      Project Manager-Mathematics - Great Minds
-    </a></h5> 
-<p><span class="badge badge-light">Richmond United States</span></p>
-<p>Posted on: 2019-10-29</p>
 <hr/>
 
 
